--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,16 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+      <h2 id='title'>Document Editor</h2>
+    </div>
+    <div class="col-sm-9">
+      <ul class="nav nav-pills pull-right">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Editor</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 {{outlet}}
