--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,9 +5,9 @@
     </div>
     <div class="col-sm-9">
       <ul class="nav nav-pills pull-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Editor</a></li>
-        <li><a href="#">About</a></li>
+        <li>{{#link-to 'index'}}Home{{/link-to}}</li>
+        <li>{{#link-to 'about'}}About{{/link-to}}</li>
+        <li>{{#link-to 'documents'}}Documents{{/link-to}}</li>
       </ul>
     </div>
   </div>
