--- a/app/templates/documents.hbs
+++ b/app/templates/documents.hbs
@@ -12,6 +12,8 @@
         {{/each}}
       </div>
     </div>
-    <div class="col-sm-9">{{outlet}}</div>
+    <div class="col-sm-9">
+      {{outlet}}
+    </div>
   </div>
 </div>
