--- a/app/templates/documents.hbs
+++ b/app/templates/documents.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
-      {{#link-to 'documents.new' class="btn btn-default"}}Create Document{{/link-to}}
+      {{#link-to 'documents.new' class="btn btn-default btn-create-document"}}Create Document{{/link-to}}
       <hr>
       <div class="list-group">
         {{#each document in controller}}
